clone kickstarter landing

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,464 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>CRAZYBABY</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/icons/icon-favicon.svg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header page__header container">
+      <div class="header__content">
+        <div class="top-bar header__top">
+          <a href="#" class="top-bar__logo">
+            <img src="./images/logo.svg" alt="CRAZYBABY">
+          </a>
+
+          <div class="top-bar__content">
+            <div class="toolbar toolbar--header">
+              <p class="toolbar__specs">
+                <a
+                  class="toolbar__specs-link"
+                  href="https://www.kickstarter.com/projects/lunabycrazybaby/luna-by-crazybaby-revolutionary-wireless-speaker"
+                  target="_blank"
+                >
+                  SPECS
+                </a>
+              </p>
+              <p>
+                <span class="toolbar__lang
+                toolbar__lang--chosen">EN</span>
+                /
+                <span class="toolbar__lang">UA</span>
+              </p>
+            </div>
+
+            <button
+              type="button"
+              class="
+                top-bar__button
+                button
+                button--primary-black
+              "
+              onclick=" window.open('https://www.kickstarter.com/projects/lunabycrazybaby/luna-by-crazybaby-revolutionary-wireless-speaker', '_blank'); return false;"
+            >Buy</button>
+
+            <a href="#menu" class="icon icon--menu"></a>
+          </div>
+        </div>
+
+        <div class="header__bottom">
+          <div class="header__image-container">
+            <img
+              src="./images/header-bg-mobile.png"
+              alt="Wireless Speaker"
+              class="header__image">
+          </div>
+
+          <div class="header__text">
+            <h1 class="header__title">Futuristic Wireless Speaker</h1>
+            <p class="header__description">Luna’s performance is balanced and smooth in all frequency ranges which makes the music both naturally pleasant and distinctly more layered.</p>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu container page__menu" id="menu">
+      <div class="menu__content">
+        <div class="top-bar menu__top">
+          <a href="#" class="top-bar__logo">
+            <img src="./images/logo.svg" alt="CRAZYBABY">
+          </a>
+
+          <div class="top-bar__content">
+            <a href="#" class="icon icon--cross">
+            </a>
+          </div>
+        </div>
+
+        <div class="menu__bottom">
+          <div class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#benefits" class="nav__link">Our story</a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#about-us" class="nav__link">About us</a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#features" class="nav__link">Features</a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#questions" class="nav__link">Get in touch</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="toolbar toolbar--menu">
+            <p class="toolbar__specs">
+              <a
+                class="toolbar__specs-link"
+                href="https://www.kickstarter.com/projects/lunabycrazybaby/luna-by-crazybaby-revolutionary-wireless-speaker"
+                target="_blank"
+              >
+                SPECS
+              </a>
+            </p>
+            <p>
+              <span class="toolbar__lang
+              toolbar__lang--chosen">EN</span>
+              /
+              <span class="toolbar__lang">UA</span>
+            </p>
+          </div>
+
+          <button
+            type="button"
+            class="
+              menu__button
+              button
+              button--primary-black
+            "
+            onclick=" window.open('https://www.kickstarter.com/projects/lunabycrazybaby/luna-by-crazybaby-revolutionary-wireless-speaker', '_blank'); return false;"
+          >Buy</button>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="nav nav--row main__nav container">
+        <ul class="nav__list nav__list--row">
+          <li class="nav__item">
+            <a href="#benefits" class="nav__link">Our story</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#about-us" class="nav__link">About us</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#features" class="nav__link">Features</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#questions" class="nav__link">Get in touch</a>
+          </li>
+        </ul>
+      </div>
+
+      <section class="benefits container main__section" id="benefits">
+        <div class="benefits__content">
+          <div class="benefit benefits__card">
+            <img
+              class="benefit__img"
+              alt="Futuristic Design"
+              src="./images/img-design-1.svg"
+            >
+            <h4 class="benefit__title">Futuristic Design</h4>
+            <p class="benefit__text">To give Luna a truly flawless look, we specifically picked aircraft grade aluminum as its material and adopted both three-dimensional stretch-bending technology and a high precision cold forging technique.</p>
+          </div>
+
+          <div class="benefit benefits__card">
+            <img
+              class="benefit__img"
+              alt="Tweeter Speaker System"
+              src="./images/img-sound-system-2.svg"
+            >
+            <h4 class="benefit__title">Tweeter Speaker System</h4>
+            <p class="benefit__text">To deliver a more layered sound performance better than a sole full-range speaker, our team equipped Luna with one more tweeter speaker responsible for high-frequency sound independently.</p>
+          </div>
+
+          <div class="benefit benefits__card">
+            <img
+              class="benefit__img"
+              alt="Multiroom System"
+              src="./images/img-multiroom-system-3.svg"
+            >
+            <h4 class="benefit__title">Multiroom System</h4>
+            <p class="benefit__text">Luna is natively compatible with your home Wi-Fi. Set up multiple speakers in different rooms to expand your music experience into the entire house.</p>
+          </div>
+
+          <div class="benefit benefits__card">
+            <img
+              class="benefit__img"
+              alt="Intuitive Lighting System"
+              src="./images/img-lightning-system-4.svg"
+            >
+            <h4 class="benefit__title">Intuitive Lighting System</h4>
+            <p class="benefit__text">An intuitive user interface allows you to adjust the hue and saturation of color for lighting that fits any mood and situation.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="presentation main__section container">
+        <img
+          class="presentation__img"
+          src="./images/presentation.png"
+          alt="Meet Luna by CRAZYBABY"
+        >
+      </section>
+
+      <section
+        id="about-us"
+        class="
+          about-us
+          main__section
+          container
+          container--unlimited-tablet"
+      >
+        <article class="
+          about-us-fact
+          about-us__article">
+          <h2 class="section-title about-us-fact__title">Designed for the future</h2>
+
+          <img
+            src="./images/img-scetch-mobile.png"
+            alt="Scetch of a product"
+            class="about-us-fact__img about-us-fact__img--scetch"
+          >
+
+          <div class="about-us-fact__description">
+            <p class="about-us-fact__text">In 2014, a group of geeky industrial designers, engineering veterans and acoustic experts formed crazybaby. This is a bunch of passionate people who are crazy enough to think they can challenge the industry with disruptive audio products. </p>
+
+            <button
+              class="
+                button
+                button--secondary
+                about-us-fact__button"
+              >
+              See more about us
+            </button>
+          </div>
+        </article>
+
+        <article class="
+          about-us-fact
+          about-us__article"
+        >
+          <h2 class="
+            section-title
+            about-us-fact__title about-us-fact__title--left
+          ">Luna Eye</h2>
+
+          <img
+            src="./images/img-luna-mobile.png"
+            alt="Luna Eye"
+            class="about-us-fact__img
+            about-us-fact__img--right
+            about-us-fact__img--right-luna
+            "
+          >
+
+          <div class="about-us-fact__description about-us-fact__description--left">
+            <p class="about-us-fact__text">Luna Eye is to the essence of this innovative light and audio system. It comprises an independent tweeter speaker, a light guiding component, a dome and a ring ornament.</p>
+
+            <button
+              class="
+                button
+                button--secondary
+                about-us-fact__button
+              ">
+              See more about us
+            </button>
+          </div>
+        </article>
+      </section>
+
+      <section class="testemonials container main__section">
+        <div class="testemonials__content">
+          <p class="testemonials__text">
+            “It really took me by surprise honestly to have such full beautiful sound that coming out of this small compact device. And with the brush aluminum surface, it feels so familiar. Like my iPhone.”
+          </p>
+          <img
+            class="testemonials__img"
+            alt="Photo of Garrett Martin, Creative Director"
+            src="./images/img-testimonials-person.svg"
+          >
+          <h5 class="testemonials__name">Garrett Martin</h5>
+          <p class="testemonials__position">Creative Director</p>
+        </div>
+      </section>
+
+      <section
+        id="features"
+        class="features main__section container container--unlimited-mobile">
+        <div class="features__top container container--unlimited-desktop">
+          <h2 class="section-title">FEATURES</h2>
+        </div>
+
+        <div class="features__content">
+          <div class="features__block features__block--active">
+            <h3 class="features__title">Connectivity</h3>
+            <ul class="features__list">
+              <li class="features__list-item">
+                Hands Free Wireless Audio
+              </li>
+              <li class="features__list-item">
+                Bluetooth 4.0 LE
+              </li>
+              <li class="features__list-item">
+                Wi-Fi 2.4 GHz (802.11 b/g/n)
+              </li>
+              <li class="features__list-item">
+                Smart Multiroom System Set Up
+              </li>
+              <li class="features__list-item">
+                Party Mode with 6.0 Units and above
+              </li>
+              <li class="features__list-item">
+                MESHNET Multi Speaker Network
+              </li>
+            </ul>
+          </div>
+
+          <div class="features__block">
+            <h3 class="features__title">App Features</h3>
+            <ul class="features__list">
+              <li class="features__list-item">
+                Customize Music Schedule
+              </li>
+              <li class="features__list-item">
+                Wake Up with Favorite Songs
+              </li>
+              <li class="features__list-item">
+                Home Detection Auto Wake Up
+              </li>
+              <li class="features__list-item">
+                Color Wheel
+              </li>
+            </ul>
+          </div>
+
+          <div class="features__block">
+            <h3 class="features__title">Sound & Music</h3>
+            <ul class="features__list">
+              <li class="features__list-item">
+                Feel-in-chest Base Power
+              </li>
+              <li class="features__list-item">
+                Lossless Digital Audio Transmission
+              </li>
+              <li class="features__list-item">
+                Easy & Stable Stereo Pairing
+              </li>
+              <li class="features__list-item">
+                Crisp and Clear High Frequency Sound
+              </li>
+              <li class="features__list-item">
+                Streams from Cloud Music and Local Library
+              </li>
+              <li class="features__list-item">
+                Auto Music from Last Song Stopped
+              </li>
+            </ul>
+          </div>
+
+          <div class="features__control">
+            <div>
+              <button
+              type="button"
+              class="features__slider-btn features__prev-btn"
+              disabled
+              >
+              </button>
+              <button type="button" class="features__slider-btn features__next-btn">
+              </button>
+            </div>
+
+            <div class="features__pages">
+              <span class="features__current-page"></span>
+              /
+              <span class="features__page-count">03</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        id="questions"
+        class="questions container main__section">
+        <h2 class="section-title">DO YOU HAVE ANY QUESTIONS?</h2>
+
+        <form
+          action="#"
+          method="post"
+          class="questions__form"
+          onsubmit="this.reset(); return false;"
+        >
+          <label for="email"></label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            class="questions__input" placeholder="Your email"
+            required
+          >
+          <textarea
+            name="message"
+            class="questions__input questions__input--textarea"
+            placeholder="Your message..."
+            required
+          ></textarea>
+          <button type="submit" class="button button--primary-green">SEND</button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="footer container">
+      <div class="footer__top">
+        <a href="#" class="footer__logo">
+          <img src="./images/logo.svg" alt="CRAZYBABY">
+        </a>
+
+        <a href="#" class="icon icon--scroll-up footer__icon"></a>
+      </div>
+
+      <div class="footer__socials">
+        <a
+          href="https://www.facebook.com"
+          target="_blank"
+          class="icon icon--facebook icon--socials">
+        </a>
+        <a
+          href="https://twitter.com"
+          target="_blank"
+          class="icon icon--twitter icon--socials">
+        </a>
+        <a
+          href="https://www.instagram.com"
+          target="_blank"
+          class="icon icon--instagram icon--socials">
+        </a>
+      </div>
+
+      <div class="footer__bottom">
+        <p class="footer__official-info">
+          <span>
+            © 2023 All rights reserved.
+          </span>
+          <a
+            href="#"
+            target="_blank"
+            class="footer__terms"
+          >Terms of Use & Privacy Policy</a>
+        </p>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
